--- a/ProjetoFinalReact/package.json
+++ b/ProjetoFinalReact/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "watch-app": "npx tailwindcss -i ./src/input.css -o ./dist/output.css  && npm run dev",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "currently": "^0.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "sass": "^1.67.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
